# Data-Analytics-Buddy-GPT

./: Data_Chat.py  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: how_df_agent_work.ipynb
pages/: Interactive_Viz.py
src/: utils.py
src/models/: llm.py
